--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Chrome",
-            "request": "launch",
             "type": "pwa-chrome",
-            "url": "http://localhost:8080",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:65002",
             "webRoot": "${workspaceFolder}"
-        },
+        }
     ]
 }
